# arxiv-to-md

./: .gitignore  PROJECT_PLAN.md  README.md  pyproject.toml  test_output.md
src/arxiv_to_md/: __init__.py  cli.py  converter.py  fetcher.py  html_parser.py  pdf_parser.py  translator.py
tests/: test_fetcher.py  test_html_parser.py  test_translator.py
